--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         </div>
 
-        <audio autoplay controls loop>
+        <audio controls loop>
             <source src="Sourse/Files/Neon Genesis Evangelion - Opening (Creditless) (HD - 60 fps) [TubeRipper.com].mp3"
                 type="audio/ogg">
         </audio>
